--- a/index.html
+++ b/index.html
@@ -1,10 +1,13 @@
 <!DOCTYPE html>
 <!-- Главная страница -->
 <html lang="ru">
-    <head>
-        <link rel="stylesheet" href="./assets/css/main.css">
-    </head>
-    <body>
 
-    </body>
+<head>
+    <link rel="stylesheet" href="./assets/css/main.css">
+</head>
+
+<body>
+    <h1>Hello World</h1>
+</body>
+
 </html>
