add hello world solution

--- a/index.html
+++ b/index.html
@@ -9,7 +9,13 @@
 </head>
 
 <body>
-    <p>Hello world</p>
+    <div class="page">
+      <main class="main"></main>
+    </div>
+    <div class="header">
+        <h1 class="header__title">Reusable component library</h1>
+    </div>
+
 </body>
 
 </html>
